RESOLVED FIXED96513
[EFL] Fix build break when netscape-plugin-api is enebled after r126971
https://bugs.webkit.org/show_bug.cgi?id=96513
Summary [EFL] Fix build break when netscape-plugin-api is enebled after r126971
Ryuan Choi
Reported 2012-09-12 07:37:15 PDT
After r126971, I removed WebKit dependency from WebCore. But, PluginViewEfl still use PageClientEfl to get Ecore_Evas. Patch will be added.
Attachments
Patch (1.84 KB, patch)
2012-09-12 08:06 PDT, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2012-09-12 08:06:35 PDT
WebKit Review Bot
Comment 2 2012-09-12 08:32:25 PDT
Comment on attachment 163630 [details] Patch Clearing flags on attachment: 163630 Committed r128313: <http://trac.webkit.org/changeset/128313>
WebKit Review Bot
Comment 3 2012-09-12 08:32:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.