[EFL] Fix build break when netscape-plugin-api is enebled after r126971 https://bugs.webkit.org/show_bug.cgi?id=96513

Unreviewed build fix.


* plugins/efl/PluginViewEfl.cpp:
(WebCore::PluginView::platformGetValue):


Canonical link: https://commits.webkit.org/114402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128313 268f45cc-cd09-0410-ab3c-d52691b4dbfc