Source/WebCore/plugins/efl/PluginViewEfl.cpp
@@ -38,7 +38,6 @@
 #include "HostWindow.h"
 #include "MouseEvent.h"
 #include "NotImplemented.h"
-#include "PageClientEfl.h"
 #include "PluginPackage.h"
 #include "npruntime_impl.h"
 #include "runtime/JSLock.h"
@@ -283,9 +282,10 @@ bool PluginView::platformGetValue(NPNVariable variable, void* value, NPError* re
     }
 
     case NPNVnetscapeWindow: {
-        PageClientEfl* pageClient = static_cast<PageClientEfl*>(m_parentFrame->view()->hostWindow()->platformPageClient());
-        Evas_Object* widget = pageClient->view();
-        Evas* evas = evas_object_evas_get(widget);
+        Evas* evas = m_parentFrame->view()->evas();
+        if (!evas)
+            return false;
+
         Ecore_Evas* ecoreEvas = ecore_evas_ecore_evas_get(evas);
         *static_cast<XID*>(value) = static_cast<Window>(ecore_evas_window_get(ecoreEvas));
         *result = NPERR_NO_ERROR;
